deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx 
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: apps
        image: artifacts.tekuro.io/apps:113eb05c5f8a1b78b59e8f2f2b8233309031ea4f
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred
