deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: apps.tekuro.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apps-service
                port:
                  number: 80
